<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/enterNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/name"
        android:textSize="22sp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/enterPhoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/phone"
        android:textSize="22sp"
        tools:ignore="Autofill,TextFields" />

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">

        <Button
            android:id="@+id/addNameBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/add"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/printNameBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_secondary"
            android:text="@string/print"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clearTableBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/clear"
            android:textSize="12sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:text="@string/name_tabl"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:padding="6dp"
                android:text="@string/number_tabl"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:paddingTop="6dp"
                android:text="@string/role_tabl"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/n"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/phoneTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/n"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/roleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/n"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>